Revert "Felles 32 og Jersey for klient + server (#461)"
This reverts commit 629c25247169a652c932c60494d99f60d21315c7.